[package]
name = "revonet"
version = "0.0.1"
authors = ["Yury Tsoy <yurytsoy@gmail.com>"]
license = "GPL-3.0"
description = "Rust implementation of real-coded genetic algorithm for solving optimization problems and training of neural networks. The latter is also known as neuroevolution."

[dependencies]
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"